<resources>
    <string name="app_name">mp3</string>
    <string name="mp3">&lt;/mp3</string>
    <string name="home">Home</string>
    <string name="signup_message">Sign up</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email_example">example@email.com</string>
    <string name="login">log in</string>
    <string name="sign_up">sign up</string>
    <string name="tv_sign_up"><u>Sign up</u></string>
    <string name="tv_login"><u>Already have an account?</u></string>
    <string name="hello">Hello,</string>
    <string name="php">Php.</string>
    <string name="balance">Balance</string>
    <string name="logout">Log out</string>
    <string name="qr_message">Scan QR Code</string>
    <string name="cancel">cancel</string>
    <string name="enter_amount">Enter amount:</string>
    <string name="back">Back</string>
    <string name="send_to">Send to:</string>
    <string name="Send">Send</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="add">Add</string>

    <!--Keypad-->
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num0">0</string>
    <string name="numx">x</string>
    <string name="num_dot">.</string>

</resources>