<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context="com.example.MP3.LoginActivity">

    <LinearLayout
        android:id="@+id/cv_1"
        android:layout_width="match_parent"
        android:layout_height="750dp"
        android:elevation="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="50dp"
        android:backgroundTint="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="40dp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_email"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                app:cardCornerRadius="25dp"
                android:layout_marginTop="40dp"
                app:cardBackgroundColor="@color/black">

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:textColor="@color/white"
                    android:textSize="16dp"/>

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="25dp"
                    android:outlineProvider="bounds"
                    android:textColor="@color/white"
                    android:inputType="textEmailAddress"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_password"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                app:cardCornerRadius="25dp"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/black">

                <TextView
                    android:id="@+id/tv_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:textColor="@color/white"
                    android:textSize="16dp"/>

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="25dp"
                    android:outlineProvider="bounds"
                    android:textColor="@color/white"
                    android:inputType="textPassword"/>
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:layout_marginStart="110dp"
                android:background="@color/black"
                android:text="@string/login"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_bold"/>

            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:textStyle="italic"
                android:text="@string/tv_sign_up"
                android:textColor="@color/white"
                android:textSize="18dp" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>