<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_toolbar"
    tools:context="com.example.MP3.TransferActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/transparent"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/back"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
        android:paddingStart="20dp">

        <TextView
            android:id="@+id/tv_transfer_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_to"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_semibold"/>

        <TextView
            android:id="@+id/tv_recepient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="30sp"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_1"
        android:layout_width="370dp"
        android:layout_height="160dp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="86dp"
        app:cardCornerRadius="35dp"
        android:elevation="50dp"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp">

        <TextView
            android:id="@+id/tv_instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_amount"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_bold"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_2"
                android:layout_width="330dp"
                android:layout_height="100dp"
                android:elevation="20dp"
                android:backgroundTint="@color/blue"
                app:layout_constraintStart_toStartOf="parent"
                app:cardCornerRadius="35dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="40dp">

                <EditText
                    android:id="@+id/et_amount"
                    android:layout_width="280dp"
                    android:layout_height="80dp"
                    android:inputType="number"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textSize="50sp"
                    android:fontFamily="@font/montserrat_semibold"/>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bttn_transfer"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@color/blue"
        android:text="@string/Send"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="40dp"
        app:layout_constraintTop_toBottomOf="@id/cv_1"
        android:layout_marginTop="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>