<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_toolbar"
    tools:context="com.example.MP3.SignupActivity">


    <LinearLayout
        android:id="@+id/cv_1"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:elevation="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="50dp"
        android:backgroundTint="@color/lightBlack">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_message"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="40dp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_name"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                app:cardCornerRadius="25dp"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/blue">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textColor="@color/black"
                    android:textSize="16dp"/>
                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="25dp"
                    android:inputType="textPersonName"
                    android:outlineProvider="bounds"
                    android:textColor="@color/white" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_email"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                app:cardCornerRadius="25dp"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/blue">

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textColor="@color/black"
                    android:textSize="16dp"/>

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="40dp"
                    android:inputType="textEmailAddress"
                    android:outlineProvider="bounds"
                    android:textColor="@color/white" />
            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:id="@+id/cv_password"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                app:cardCornerRadius="25dp"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/blue">

                <TextView
                    android:id="@+id/tv_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textColor="@color/black"
                    android:textSize="16dp"/>

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:textColor="@color/white"
                    android:inputType="textPassword"
                    android:layout_marginStart="25dp"
                    android:outlineProvider="bounds" />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bttn_sigup"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button"
                android:text="@string/sign_up"
                android:layout_marginTop="30dp"
                android:layout_marginStart="140dp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_semibold"/>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>